force-app/main/default/objects/FQS_Campaign_Hierarchy_Setup__mdt/FQS_Campaign_Hierarchy_Setup__mdt.object-meta.xml
<CustomObject>
    <description>Audit record written by FQS_CampaignHierarchyBuilder after a successful campaign hierarchy setup run. Stores the chosen model, the IDs of created top-level Campaigns, the ask-creation choice, and the run timestamp. Used for support investigations and as an anchor for future Deep Clone capability. Only one row ships (DeveloperName = Default); it is upserted on each successful run.</description>
    <label>FQS Campaign Hierarchy Setup</label>
    <pluralLabel>FQS Campaign Hierarchy Setups</pluralLabel>
</CustomObject>