force-app/main/default/objects/FQS_Campaign_Hierarchy_Setup__mdt/fields/All_Created_Top_Level_Ids_JSON__c.field-meta.xml
<CustomField>
    <fullName>All_Created_Top_Level_Ids_JSON__c</fullName>
    <description>JSON array of all top-level Campaign IDs created in this run. Populated for GivingPrograms runs where multiple program top-levels are created. For Seasonal and Strategy runs, contains a single-element array matching Last_Top_Level_Id__c. Useful for support investigations and as a target list for future Deep Clone capability.</description>
    <inlineHelpText>Stores the Salesforce IDs of all top-level Campaigns created when the setup flow last ran. For Giving Programs runs, this is a JSON array of all program Campaign IDs.</inlineHelpText>
    <label>All Created Top Level IDs (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>