force-app/main/default/objects/FQS_Campaign_Hierarchy_Setup__mdt/fields/Chosen_Model__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Model__c</fullName>
    <description>The organizing model the admin selected during the most recent successful setup run. One of Seasonal, GivingPrograms, or Strategy. Written by FQS_CampaignHierarchyBuilder.</description>
    <inlineHelpText>The campaign hierarchy model the admin chose the last time the setup flow ran successfully.</inlineHelpText>
    <label>Chosen Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>GivingPrograms</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>