force-app/main/default/objects/FQS_Campaign_Hierarchy_Setup__mdt/fields/Last_Ask_Creation_Choice__c.field-meta.xml
<CustomField>
    <fullName>Last_Ask_Creation_Choice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the admin chose to create level-3 ask Campaigns during the most recent successful setup run. True = asks were created; false = admin skipped level 3. Written by FQS_CampaignHierarchyBuilder.</description>
    <inlineHelpText>Records whether the admin chose to create individual ask campaigns (level 3) during the last setup run.</inlineHelpText>
    <label>Last Ask Creation Choice</label>
    <type>Checkbox</type>
</CustomField>