force-app/main/default/objects/FQS_Campaign_Hierarchy_Setup__mdt/fields/Last_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_At__c</fullName>
    <description>Timestamp of the most recent successful setup run. Written by FQS_CampaignHierarchyBuilder.</description>
    <inlineHelpText>The date and time when the campaign hierarchy setup flow last ran successfully.</inlineHelpText>
    <label>Last Run At</label>
    <type>DateTime</type>
</CustomField>