force-app/main/default/objects/FQS_Campaign_Hierarchy_Setup__mdt/fields/Last_Top_Level_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Top_Level_Id__c</fullName>
    <description>Salesforce ID of the primary top-level Campaign created during the most recent successful setup run. For Seasonal and Strategy models, this is the single rollup Campaign ID. For GivingPrograms, this is the first program Campaign ID in the list. See All_Created_Top_Level_Ids_JSON__c for the complete set. Written by FQS_CampaignHierarchyBuilder.</description>
    <inlineHelpText>The 18-character Salesforce ID of the main top-level Campaign created when the setup flow last ran. Navigate to this Campaign to see the full hierarchy.</inlineHelpText>
    <label>Last Top Level Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>